--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
     />
-    <title>Vite + Material UI + TS</title>
+    <title>dashboard</title>
   </head>
   <body dir="rtl">
     <div id="root"></div>
